--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,9 @@
             object-position: center;
         }
         
-        .hero-section > div[style*="position: absolute"] {
+        .hero-section > div,
+        .hero-section > div > div,
+        .hero-section div {
             position: absolute;
             top: 0;
             left: 0;
