--- a/templates/base.html
+++ b/templates/base.html
@@ -55,12 +55,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=DM+Serif+Text:400,400i&display=swap&subset=latin-ext" rel="stylesheet"> 
     
-    <!-- Hide loading overlay and fix mobile text overlap -->
+    <!-- Fix mobile text overlap -->
     <style>
-        .loading-area {
-            display: none !important;
-        }
-        
         /* Hero Section Mobile Fixes */
         @media (max-width: 768px) {
             .hero-section h1 {
@@ -411,19 +407,6 @@
      
     </div>
 
-<!-- LOADING AREA START ===== -->
-<div class="loading-area">
-    <div class="loading-box"></div>
-    <div class="loading-pic">
-        <div class="cssload-thecube">
-            <div class="cssload-cube cssload-c1"></div>
-            <div class="cssload-cube cssload-c2"></div>
-            <div class="cssload-cube cssload-c4"></div>
-            <div class="cssload-cube cssload-c3"></div>
-        </div>
-    </div>
-</div>
-<!-- LOADING AREA  END ====== -->
 
 
 
